--- a/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MainWindow.xaml
@@ -1,9 +1,31 @@
 ﻿<Window x:Class="MusicPlayer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:m="clr-namespace:MP3Collection;assembly=MP3Collection"
         Title="My WPF Music Player" Height="330" Width="460"
         Background="#c8cfc3" WindowStartupLocation="CenterScreen"        
         >
+    <Window.Resources>
+        <m:MP3Collection 
+            x:Key="MusicCollection"
+            DirectoryPath="C:\Users\kataev2\Downloads"
+            ExpandFilders="True"
+            DefaultAlbumArt=".\Assets\album.jpg" />
+        
+        <DataTemplate x:Key="SongListTemplate">
+            <StackPanel Orientation="Horizontal">
+                <Image
+                            Width="24" Height="24"
+                            Margin="4"
+                            VerticalAlignment="Center"
+                            Source="{Binding AlbumArt}" />
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock FontWeight="Bold" Text="{Binding Title}" />
+                    <TextBlock Text="{Binding Artist}" />
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <MediaElement
             Name="MyMediaElement"
@@ -24,10 +46,11 @@
             
             <!-- Список песен -->
             <ListBox
+                ItemsSource="{StaticResource MusicCollection}"
                 Grid.Column="0"
                 Grid.RowSpan="2"
                 Margin="0,0,10,0">
-                <ListBoxItem>
+              <!--  <ListBoxItem>
                     
                     <StackPanel Orientation="Horizontal">
                         <Image
@@ -42,6 +65,7 @@
                     </StackPanel>
                     
                 </ListBoxItem>
+                -->
             </ListBox>
            
             <!-- Сейчас проигрываеться -->
@@ -103,6 +127,7 @@
             <TextBlock
                 Width="40" Height="22"
                 Text="00:46"
+                FontSize="16"
                 VerticalAlignment="Center" />
             
             </StackPanel>
