--- a/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MainWindow.xaml
@@ -12,7 +12,7 @@
             ExpandFilders="True"
             DefaultAlbumArt=".\Assets\album.jpg" />
         
-        <DataTemplate x:Key="SongListTemplate">
+        <DataTemplate x:Key="SongListTemplate">        
             <StackPanel Orientation="Horizontal">
                 <Image
                             Width="24" Height="24"
@@ -25,12 +25,36 @@
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
+        
+        <DataTemplate x:Key="NowPlayingTemplate">
+            <Canvas>
+                <Image
+                    Width="150"
+                    Source="{Binding AlbumArt}" />
+                <StackPanel Canvas.Top="160">
+                    <TextBlock
+                        Width="150"
+                        FontWeight="Bold"
+                        Text="{Binding Title}"
+                        TextTrimming="CharacterEllipsis" />
+                    <TextBlock
+                        Width="150"
+                        Text="{Binding Artist}"
+                        TextTrimming="CharacterEllipsis" />
+                    <TextBlock
+                        Width="150"
+                        Text="{Binding Album}"
+                        TextTrimming="CharacterEllipsis" />
+                </StackPanel>
+            </Canvas>
+        </DataTemplate>
+        
     </Window.Resources>
     <Grid>
         <MediaElement
             Name="MyMediaElement"
             LoadedBehavior="Manual"
-            Source="C:\Users\kataev2\Downloads\Moby - Lift Me Up  (audiopoisk.com).mp3" />
+            Source="{Binding ElementName=SongList, Path=SelectedItem.FileName}" />
         
         <Grid Margin="10">
             
@@ -46,7 +70,10 @@
             
             <!-- Список песен -->
             <ListBox
+                Name="SongList"
+                SelectedIndex="0"
                 ItemsSource="{StaticResource MusicCollection}"
+                ItemTemplate="{StaticResource SongListTemplate}"
                 Grid.Column="0"
                 Grid.RowSpan="2"
                 Margin="0,0,10,0">
@@ -70,11 +97,13 @@
            
             <!-- Сейчас проигрываеться -->
             <ContentControl
+                Content="{Binding ElementName=SongList, Path=SelectedItem}"
+                ContentTemplate="{StaticResource NowPlayingTemplate}"
                 Width="150"
                 Margin="0,0,0,10"
                 Grid.Column="1" 
                 Grid.Row="0">
-                <Canvas>
+              <!--  <Canvas>
                     <Image
                        Width="150" Height="150"
                        Source=".\Asserts\album.jpg" />
@@ -94,6 +123,7 @@
                             TextTrimming="CharacterEllipsis" />
                     </StackPanel>
                 </Canvas>
+                -->
             </ContentControl>
             
             <!-- Контроллы -->
